# permanence

./: .gitignore  BLOG_POST_TEMPLATE.md  IMPLEMENTATION_CONTEXT.md  PART1_DEVELOPMENT_TRAINING_CHECKLIST.md  PART1_MASTER_CHECKLIST.md  PERMANENCE_MASTER_SPEC.md  README.md  app.py  client.py  export_ghost_demo.py  generate_curves.py  interactive_eval.py  models.py  openenv.yaml  pyproject.toml  validate_submission.py
dashboard/: package.json
dashboard/src/: App.jsx  DecisionGraph.jsx  index.css
docs/: PART1_QUICK_SUMMARY.md  PERMANENCE_AGENT_CONTEXT.md  PERMANENCE_PROJECT_DESCRIPTION.md
permanence/: __init__.py  env.py  episode_tracker.py  task_manager.py  tasks.py  world_engine.py
permanence/actions/: __init__.py  definitions.py  registry.py
permanence/agent_interface/: __init__.py  formatter.py  parser.py
permanence/common/: __init__.py  serialization.py
permanence/reward/: __init__.py  engine.py
permanence/tasks/: __init__.py  task_bank.py
permanence/world/: __init__.py  consequence_engine.py  state.py
server/: Dockerfile  __init__.py  app.py  permanence_server.py  requirements.txt
tests/: test_core.py
training/: __init__.py  config.py  config.yaml  evaluate.py  generate_demo.py  generate_warmup_traces.py  reward_functions.py  train.py  train_trl.py  warmup_traces.jsonl
