[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permanence"
version = "1.1.0"
description = "PERMANENCE reinforcement learning environment for action reversibility training"
readme = "PERMANENCE_PROJECT_DESCRIPTION.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "GitHub Copilot"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["permanence*"]
